--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: actions/checkout@v3
     
     - run: git clone --recursive https://github.com/ndless-nspire/Ndless.git
-    - run: cd ndless-sdk/toolchain/
+    - run: cd Ndless/ndless-sdk/toolchain/
     - run: ./build_toolchain.sh
