--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: |
-          sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib wget boost-program-options -y
+          sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev -y
           git clone --recursive https://github.com/ndless-nspire/Ndless.git
           cd Ndless/ndless-sdk/toolchain/
           ./build_toolchain.sh 
