--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ master ]
 
+env:
+  GITHUB_PATH: .github/workflows/ndless-sdk-bin/
+
 jobs:
   install-dependancies:
     runs-on: ubuntu-latest
@@ -12,6 +15,4 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
           sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev -y
-          git clone --recursive https://github.com/ndless-nspire/Ndless.git
-          cd Ndless/ndless-sdk/toolchain/
-          ./build_toolchain.sh 
+          nspire-gcc
