--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -16,4 +16,6 @@ jobs:
     - run: |
           sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev -y
           ls $HOME
+          pwd
+          ls -a
           nspire-gcc
