--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 env:
-  GITHUB_PATH: $HOME/.github/workflows/ndless-sdk-bin/
+  GITHUB_PATH: $HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/
 
 jobs:
   install-dependancies:
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
           sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev -y
-          ls $HOME
+          ls $HOME/work/crafti/crafti
           pwd
           ls -a
           nspire-gcc
