--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -15,7 +15,5 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
           sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev -y
-          ls $HOME/work/crafti/crafti
-          pwd
-          ls -a
-          nspire-gcc
+          ls  $HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/
+          echo $PATH
