--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -4,10 +4,13 @@ on:
   push:
     branches: [ master ]
 
-env:
-  GITHUB_PATH: $HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/
-
 jobs:
+  setup-path:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+    - run: echo $HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/ >> $GITHUB_PATH
   install-dependancies:
     runs-on: ubuntu-latest
     
