--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: |
+          echo $HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/ >> $GITHUB_PATH
           sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev -y
           ls  $HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/
           echo $PATH
