--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -10,7 +10,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-    - run: echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/" >> $GITHUB_PATH
+    - run: |
+          echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/" >> $GITHUB_PATH
+          echo "$PATH"
   install-dependancies:
     runs-on: ubuntu-latest
     
