--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: |
+          echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/"
           echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/" >> $GITHUB_PATH
           echo "$PATH"
   install-dependancies:
