--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -5,21 +5,20 @@ on:
     branches: [ master ]
 
 jobs:
-  setup-path:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
-    - run: |
-          echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/"
-          echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/" >> $GITHUB_PATH
-          echo "$PATH"
   install-dependancies:
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v3
     - run: |
-          sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev -y
-          ls  $HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/
-          echo $PATH
+          sudo apt update
+          sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev sed -y
+          
+          cat Makefile
+          
+          sed -i 's/nspire-gcc/$HOME\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/nspire-gcc/g' Makefile
+          sed -i 's/nspire-ld/$HOME\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/nspire-ld/g' Makefile
+          sed -i 's/nspire-g++/$HOME\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/nspire-g++/g' Makefile
+          sed -i 's/genzehn/$HOME\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/genzehn/g' Makefile
+          
+          cat Makefile
