--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -14,7 +14,7 @@ jobs:
           sudo apt update
           sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev sed -y
           
-          cat Makefile
+          echo "$HOME"
           
           sed -i 's/nspire-gcc/$HOME\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/nspire-gcc/g' Makefile
           sed -i 's/nspire-ld/$HOME\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/nspire-ld/g' Makefile
