--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -14,11 +14,16 @@ jobs:
           sudo apt update
           sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev sed -y
           
-          echo "$HOME"
-          
           sed -i 's/nspire-gcc/\/home\/runner\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/nspire-gcc/g' Makefile
           sed -i 's/nspire-ld/\/home\/runner\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/nspire-ld/g' Makefile
           sed -i 's/nspire-g++/\/home\/runner\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/nspire-g++/g' Makefile
           sed -i 's/genzehn/\/home\/runner\/work\/crafti\/crafti\/.github\/workflows\/ndless-sdk-bin\/genzehn/g' Makefile
-          
-          cat Makefile
+  build-crafti:
+    runs-on: ubuntu-latest
+    needs: install-dependancies
+    
+    steps:
+    - uses: actions/checkout@v3
+    - run: |
+          make all
+          ls release
