--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -18,8 +18,9 @@ jobs:
           
     - name: Copy Ndless SDK Tools
       run: |
-          cp -r $HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin/* ./
-          ls
+          echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin" >> $GITHUB_PATH
+          echo $GITHUB_PATH
+          echo $PATH
           
     - name: Build Crafti
       run: |
