--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -14,13 +14,11 @@ jobs:
     - name: Install Dependancies
       run: |
           sudo apt update
-          sudo apt install git gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g zlib1g-dev wget libboost-program-options-dev sed -y
+          sudo apt install git build-essential autoconf automake gdb git libffi-dev zlib1g-dev gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g wget libboost-program-options-dev sed libc6 libc-bin -y
           
-    - name: Copy Ndless SDK Tools
+    - name: Set Path
       run: |
           echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin" >> $GITHUB_PATH
-          echo $GITHUB_PATH
-          echo $PATH
           
     - name: Build Crafti
       run: |
