--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install Dependancies
       run: |
           sudo apt update
-          sudo apt install git build-essential autoconf automake gdb git libffi-dev zlib1g-dev gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g wget libboost-program-options-dev sed libc6 libc-bin -y
+          sudo apt install git libc6-armel-cross libc6-dev-armel-cross binutils-arm-linux-gnueabi libncurses5-dev build-essential bison flex libssl-dev bc build-essential autoconf automake gdb git libffi-dev zlib1g-dev gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g wget libboost-program-options-dev sed libc6 libc-bin -y
           
     - name: Set Path
       run: |
