--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -16,9 +16,11 @@ jobs:
           sudo apt update
           sudo apt install git libc6-armel-cross libc6-dev-armel-cross binutils-arm-linux-gnueabi libncurses5-dev build-essential bison flex libssl-dev bc build-essential autoconf automake gdb git libffi-dev zlib1g-dev gcc binutils libgmp-dev libmpfr-dev libmpc-dev zlib1g wget libboost-program-options-dev sed libc6 libc-bin -y
           
-    - name: Set Path
+    - name: Build Ndless-SDK
       run: |
-          echo "$HOME/work/crafti/crafti/.github/workflows/ndless-sdk-bin" >> $GITHUB_PATH
+          git clone --recursive https://github.com/ndless-nspire/Ndless.git
+          cd Ndless/ndless-sdk/toolchain/
+          ./build_toolchain.sh
           
     - name: Build Crafti
       run: |
