--- a/textures/Makefile
+++ b/textures/Makefile
@@ -1,13 +1,13 @@
 OBJS := font_bmp.h font_dat.h inventory.h inv_selection.h loading.h loadingtext.h menu.h selection.h terrain.h blockselection.h part_fire.h scrollbar.h
-ConvertImgPath = 
+ConvertImg = ../nGL/tools/ConvertImg/ConvertImg/ConvertImg
 
 all: $(OBJS)
 
 %.h: %.bmp
-	ConvertImg --format=ngl $^ $@
+	$(ConvertImg) --format=ngl $^ $@
 
 %.h: %.png
-	ConvertImg --format=ngl $^ $@
+	$(ConvertImg) --format=ngl $^ $@
 
 inventory.png: gui.png
 	convert -scale 512x512 -crop 200x42+0+1 $^ $@
