--- a/textures/Makefile
+++ b/textures/Makefile
@@ -1,5 +1,5 @@
 OBJS := font_bmp.h font_dat.h inventory.h inv_selection.h loading.h loadingtext.h menu.h selection.h terrain.h blockselection.h part_fire.h scrollbar.h
-ConvertImg = ../nGL/tools/ConvertImg/ConvertImg/ConvertImg
+ConvertImg = ~/ConvertImg/ConvertImg/ConvertImg
 
 all: $(OBJS)
 
