--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -7,12 +7,13 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  contribute-list:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Contribute List
       uses: akhilmhdh/contributors-readme-action@v2.3.4
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
