--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Install Dependancies
       run: |
           sudo apt update
-          sudo apt install git build-essential sed libgmp-dev libmpfr-dev libmpc-dev -y
+          sudo apt install git build-essential sed libgmp-dev libmpfr-dev libmpc-dev libboost-program-options-dev -y
           
     - name: Set Path
       run: |
