--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -7,26 +7,61 @@ jobs:
     runs-on: ubuntu-22.04
     
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Install Dependancies
-      run: |
-          sudo apt update
-          sudo apt install git build-essential sed libgmp-dev libmpfr-dev libmpc-dev libboost-program-options-dev -y
+      - uses: actions/checkout@v3
+      
+      - name: Get Ndless
+        run: |
+            cd .github/workflows/
+            git clone https://github.com/ndless-nspire/Ndless.git
+
+      # needed both at compile- and runtime for the toolchain
+      - name: Install toolchain dependencies
+        run: sudo apt install -y libgmp-dev libmpfr-dev libmpc-dev
+
+      # ndless-sdk
+      # build the toolchain first
+      # it takes ~40min to build, so we want to avoid that whenever possible!
+      - uses: actions/cache@v2
+        id: toolchain-cache
+        with:
+          path: .github/workflows/ndless/ndless-sdk/toolchain/install
+          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
+          key: ${{ hashFiles('ndless-sdk/toolchain/build_toolchain.sh') }}
+      - name: Build toolchain
+        if: steps.toolchain-cache.outputs.cache-hit != 'true'
+        working-directory: .github/workflows/ndless/ndless-sdk/toolchain
+        run: ./build_toolchain.sh
+      
+      # ndless
+      - name: Set up PATH
+        run: |
+          echo "$GITHUB_WORKSPACE/ndless-sdk/toolchain/install/bin" >> $GITHUB_PATH
+          echo "$GITHUB_WORKSPACE/ndless-sdk/bin" >> $GITHUB_PATH
+      - name: Install dependencies
+        run: sudo apt install -y libboost-program-options-dev
+      - name: Build
+        working-directory: .github/workflows/ndless/
+        run: make -j$(nproc --all)
+      - name: Upload Ndless Artifacts (1)
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: ndless-sdk
+          path: ndless/ndless-sdk/bin/*
+      - name: Upload Ndless Artifacts (2)
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: ndless-sdk
+          path: ndless/ndless-sdk/toolchain/install/bin/*
           
-    - name: Set Path
-      run: |
-          echo "$GITHUB_WORKSPACE/.github/workflows/ndless-sdk-bin" >> $GITHUB_PATH
-          sudo chmod +x $GITHUB_WORKSPACE/.github/workflows/ndless-sdk-bin/*
-    - name: Build Crafti
-      run: |
-          make clean
-          make all
-    - name: Build Crafti
-      run: |
-          ls release
-    - name: Upload Build Artifacts
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: output
-        path: release/*.tns
+      - name: Build Crafti
+        run: |
+            cd $GITHUB_WORKSPACE
+            make clean
+            make all
+      - name: Build Crafti
+        run: ls release
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: build
+          path: release/*.tns
