--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           path: .github/workflows/ndless/ndless-sdk/toolchain/install
           # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
-          key: ${{ hashFiles('ndless-sdk/toolchain/build_toolchain.sh') }}
+          key: ${{ runner.os }}-${{ hashFiles('ndless-sdk/toolchain/build_toolchain.sh') }}
       - name: Build toolchain
         if: steps.toolchain-cache.outputs.cache-hit != 'true'
         working-directory: .github/workflows/ndless/ndless-sdk/toolchain
