--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -11,7 +11,7 @@ jobs:
       
       - name: Get Ndless
         run: |
-            cd /home/runner/work/crafti/
+            cd .github/workflows/
             git clone --recursive https://github.com/ndless-nspire/Ndless.git
 
       # needed both at compile- and runtime for the toolchain
@@ -24,34 +24,34 @@ jobs:
       - uses: actions/cache@v2
         id: toolchain-cache
         with:
-          path: /home/runner/work/crafti/Ndless/ndless-sdk/toolchain/install
+          path: .github/workflows/Ndless/ndless-sdk/toolchain/install
           # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
-          key: ${{ runner.os }}-${{ hashFiles('/home/runner/work/crafti/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+          key: ${{ runner.os }}-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
       - name: Build toolchain
         if: steps.toolchain-cache.outputs.cache-hit != 'true'
-        working-directory: /home/runner/work/crafti/Ndless/ndless-sdk/toolchain
+        working-directory: .github/workflows/Ndless/ndless-sdk/toolchain
         run: ./build_toolchain.sh
       
       # ndless
       - name: Set up PATH
         run: |
-          echo "/home/runner/work/crafti/Ndless/ndless-sdk/toolchain/install/bin" >> $GITHUB_PATH
-          echo "/home/runner/work/crafti/Ndless/ndless-sdk/bin" >> $GITHUB_PATH
+          echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/toolchain/install/bin" >> $GITHUB_PATH
+          echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/bin" >> $GITHUB_PATH
       - name: Install dependencies
         run: sudo apt install -y libboost-program-options-dev
       - name: Build
-        working-directory: /home/runner/work/crafti/Ndless/
+        working-directory: .github/workflows/Ndless/
         run: make -j$(nproc --all)
       - name: Upload Ndless Artifacts (1)
         uses: actions/upload-artifact@v2.2.4
         with:
           name: ndless-sdk
-          path: /home/runner/work/crafti/Ndless/ndless-sdk/bin/*
+          path: .github/workflows/Ndless/ndless-sdk/bin/*
       - name: Upload Ndless Artifacts (2)
         uses: actions/upload-artifact@v2.2.4
         with:
           name: ndless-sdk
-          path: /home/runner/work/crafti/Ndless/ndless-sdk/toolchain/install/bin/*
+          path: .github/workflows/Ndless/ndless-sdk/toolchain/install/bin/*
           
       - name: Build Crafti
         run: |
