--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches: [ master ]
 jobs:
-  build-crafti:
-    runs-on: ubuntu-22.04
+  build-ndless:
+    runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v3
@@ -52,6 +52,28 @@ jobs:
         with:
           name: ndless-sdk
           path: .github/workflows/Ndless/ndless-sdk/toolchain/install/bin/*
+          
+  build-crafti:
+    runs-on: ubuntu-latest
+      
+    steps:
+      - uses: actions/cache@v2
+        id: toolchain-cache
+        with:
+          path: .github/workflows/Ndless/ndless-sdk/toolchain/install
+          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
+          key: ${{ runner.os }}-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+          
+      - name: Build toolchain
+        if: steps.toolchain-cache.outputs.cache-hit != 'true'
+        working-directory: .github/workflows/Ndless/ndless-sdk/toolchain
+        run: ./build_toolchain.sh
+      
+      # ndless
+      - name: Set up PATH
+        run: |
+          echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/toolchain/install/bin" >> $GITHUB_PATH
+          echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/bin" >> $GITHUB_PATH
           
       - name: Build Crafti
         run: |
