--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -8,6 +8,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
       
       - name: Get Ndless
         run: |
