--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ master ]
 jobs:
-  build-ndless:
+  build-crafti:
     runs-on: ubuntu-latest
     
     steps:
@@ -18,7 +18,7 @@ jobs:
 
       # needed both at compile- and runtime for the toolchain
       - name: Install toolchain dependencies
-        run: sudo apt install -y libgmp-dev libmpfr-dev libmpc-dev
+        run: sudo apt install libgmp-dev libmpfr-dev libmpc-dev build-essential gcc git sed -y
 
       # ndless-sdk
       # build the toolchain first
