--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ master ]
 jobs:
-  build-crafti:
+  build-ndless:
     runs-on: ubuntu-latest
     
     steps:
@@ -53,10 +53,46 @@ jobs:
           name: ndless-sdk
           path: .github/workflows/Ndless/ndless-sdk/toolchain/install/bin/*
           
+  build-crafti:
+    needs: build-ndless
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
+          
+      # needed both at compile- and runtime for the toolchain
+      - name: Install dependencies
+        run: sudo apt install libgmp-dev libmpfr-dev libmpc-dev build-essential gcc git sed libboost-program-options-dev binutils -y
+      
+      - name: Get Ndless
+        run: |
+            cd .github/workflows/
+            git clone --recursive https://github.com/ndless-nspire/Ndless.git
+
+      # ndless-sdk
+      # build the toolchain first
+      # it takes ~40min to build, so we want to avoid that whenever possible!
+      - uses: actions/cache@v2
+        id: toolchain-cache
+        with:
+          path: .github/workflows/Ndless/ndless-sdk/toolchain/install
+          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
+          key: ${{ runner.os }}-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+          
+      # ndless
+      - name: Set up PATH
+        run: |
+          echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/toolchain/install/bin" >> $GITHUB_PATH
+          echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/bin" >> $GITHUB_PATH
+      - name: Build
+        working-directory: .github/workflows/Ndless/
+        run: make -j$(nproc --all)
+          
       - name: Build Crafti
         run: |
             cd $GITHUB_WORKSPACE
-            make clean
             make all
       - name: Build Crafti
         run: ls release
