--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,15 +39,28 @@ jobs:
         run: |
           echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/toolchain/install/bin" >> $GITHUB_PATH
           echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/bin" >> $GITHUB_PATH
+          
+      # ndless-sdk cache
+      - uses: actions/cache@v2
+        id: ndless-sdk-cache
+        with:
+          path: .github/workflows/Ndless/ndless-sdk/bin
+          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
+          key: ${{ runner.os }}-ndless-sdk-build-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+          
       - name: Build
+        if: steps.ndless-sdk-cache.outputs.cache-hit != 'true'
         working-directory: .github/workflows/Ndless/
         run: make -j$(nproc --all)
+        
       - name: Upload Ndless Artifacts (1)
+        if: steps.ndless-sdk-cache.outputs.cache-hit != 'true'
         uses: actions/upload-artifact@v2.2.4
         with:
           name: ndless-sdk
           path: .github/workflows/Ndless/ndless-sdk/bin/*
       - name: Upload Ndless Artifacts (2)
+        if: steps.ndless-sdk-cache.outputs.cache-hit != 'true'
         uses: actions/upload-artifact@v2.2.4
         with:
           name: ndless-sdk
@@ -66,19 +79,18 @@ jobs:
       - name: Install dependencies
         run: sudo apt install libgmp-dev libmpfr-dev libmpc-dev build-essential gcc git sed libboost-program-options-dev binutils -y
       
-#      - name: Get Ndless
-#        run: |
-#            cd .github/workflows/
-#            git clone --recursive https://github.com/ndless-nspire/Ndless.git
-
-      # ndless-sdk
-      # get cached toolchain
+      - name: Get Ndless
+        run: |
+            cd .github/workflows/
+            git clone --recursive https://github.com/ndless-nspire/Ndless.git
+          
+      # ndless-sdk cache
       - uses: actions/cache@v2
-        id: toolchain-cache
+        id: ndless-sdk-cache
         with:
-          path: .github/workflows/Ndless/ndless-sdk/toolchain/install
+          path: .github/workflows/Ndless/ndless-sdk/bin
           # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
-          key: ${{ runner.os }}-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+          key: ${{ runner.os }}-ndless-sdk-build-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
           
       # ndless
       - name: Set up PATH
