--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,13 +40,13 @@ jobs:
           echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/toolchain/install/bin" >> $GITHUB_PATH
           echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/bin" >> $GITHUB_PATH
           
-      # ndless-sdk cache
+      # ndless-sdk-bin cache
       - uses: actions/cache@v2
-        id: ndless-sdk-cache
+        id: ndless-sdk-bin-cache
         with:
           path: .github/workflows/Ndless/ndless-sdk/bin
           # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
-          key: ${{ runner.os }}-ndless-sdk-build-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+          key: ${{ runner.os }}-ndless-sdk-bin-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
           
       - name: Build
         if: steps.ndless-sdk-cache.outputs.cache-hit != 'true'
@@ -79,18 +79,26 @@ jobs:
       - name: Install dependencies
         run: sudo apt install libgmp-dev libmpfr-dev libmpc-dev build-essential gcc git sed libboost-program-options-dev binutils -y
       
-      - name: Get Ndless
-        run: |
-            cd .github/workflows/
-            git clone --recursive https://github.com/ndless-nspire/Ndless.git
+#      - name: Get Ndless
+#        run: |
+#            cd .github/workflows/
+#            git clone --recursive https://github.com/ndless-nspire/Ndless.git
           
-      # ndless-sdk cache
+      # ndless-sdk-bin cache
       - uses: actions/cache@v2
-        id: ndless-sdk-cache
+        id: ndless-sdk-bin-cache
         with:
           path: .github/workflows/Ndless/ndless-sdk/bin
           # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
-          key: ${{ runner.os }}-ndless-sdk-build-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+          key: ${{ runner.os }}-ndless-sdk-bin-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+      
+      # Ndless toolchain cache
+      - uses: actions/cache@v2
+        id: toolchain-cache
+        with:
+          path: .github/workflows/Ndless/ndless-sdk/toolchain/install
+          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
+          key: ${{ runner.os }}-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
           
       # ndless
       - name: Set up PATH
