Fix branch rename

--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -2,9 +2,9 @@ name: Contributors List
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   contribute-list:
